OAK-11292: Remove usage of Guava ImmutableMap.copyOf() - oak-security-spi